# granola-ai-mcp-server-enhanced

./: CHANGELOG.md  FIX_CONTRIBUTOR.md  GOOGLE_CALENDAR_SETUP.md  LICENSE  NEXT_STEPS.md  README.md  SETUP_GCal.md  SETUP_NEW_REPO.md  TEAM_GOOGLE_SETUP.md  TEAM_SETUP.md  exchange_token.py  get_refresh_token.py  pyproject.toml  setup_google_calendar.py  test_mcp_server.py
granola_mcp_server/: models.py  server.py
