[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "granola-mcp-server"
version = "0.1.0"
description = "MCP server for Granola.ai meeting intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
granola-mcp-server = "granola_mcp_server.server:main"