[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "granola-mcp-server-enhanced"
version = "0.2.0"
description = "Enhanced MCP server for Granola.ai meeting intelligence with Google Calendar integration"
readme = "README.md"
authors = [
    {name = "shranchi0"}
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
granola-mcp-server = "granola_mcp_server.server:main"